review comments, instanceof naming
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>